// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Removes close button 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding: 0.75rem 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  font-size: 0.875rem;
}

.emotion-0 {
  margin: 0;
  color: #0c0d0d;
  font-weight: 700;
  font-size: 1rem;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0.375rem;
  margin-left: 0;
  font-weight: 700;
}

<div
  className="emotion-8 emotion-9"
  type="info"
>
  <div
    className="emotion-6 emotion-7"
  >
    <div
      className="emotion-4 emotion-3"
    >
      <p
        className="emotion-0 emotion-1"
        color="textHeading"
        fontSize="text"
        fontWeight="bold"
      >
        My Title
      </p>
      <div
        className="emotion-2 emotion-3"
        fontSize="text-s"
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders a number 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding: 0.75rem 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  font-size: 0.875rem;
}

.emotion-7 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  width: 1em;
  height: 1em;
  padding: 0;
  position: relative;
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 0.25em;
  left: 0.25em;
  right: 0;
  bottom: 0;
}

<div
  className="emotion-9 emotion-10"
  type="info"
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-2 emotion-1"
    >
      <div
        className="emotion-0 emotion-1"
        fontSize="text-s"
      >
        300
      </div>
    </div>
  </div>
  <button
    className="emotion-7 emotion-8"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-6"
      viewBox="0 0 8 8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(-4 -4)"
      >
        <path
          d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
          fillOpacity=".5"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Alert renders correctly 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding: 0.75rem 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  font-size: 0.875rem;
}

.emotion-7 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  width: 1em;
  height: 1em;
  padding: 0;
  position: relative;
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 0.25em;
  left: 0.25em;
  right: 0;
  bottom: 0;
}

<div
  className="emotion-9 emotion-10"
  type="info"
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-2 emotion-1"
    >
      <div
        className="emotion-0 emotion-1"
        fontSize="text-s"
      >
        Hello World
      </div>
    </div>
  </div>
  <button
    className="emotion-7 emotion-8"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-6"
      viewBox="0 0 8 8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(-4 -4)"
      >
        <path
          d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
          fillOpacity=".5"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Alert renders type danger correctly 1`] = `
.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  font-size: 0.875rem;
}

.emotion-7 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  width: 1em;
  height: 1em;
  padding: 0;
  position: relative;
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 0.25em;
  left: 0.25em;
  right: 0;
  bottom: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding: 0.75rem 1.125rem;
  background: #fee3e3;
  border-color: #b93435;
}

<div
  className="emotion-9 emotion-10"
  type="danger"
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-2 emotion-1"
    >
      <div
        className="emotion-0 emotion-1"
        fontSize="text-s"
      >
        Hello World
      </div>
    </div>
  </div>
  <button
    className="emotion-7 emotion-8"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-6"
      viewBox="0 0 8 8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(-4 -4)"
      >
        <path
          d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
          fillOpacity=".5"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Alert renders type info correctly 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding: 0.75rem 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  font-size: 0.875rem;
}

.emotion-7 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  width: 1em;
  height: 1em;
  padding: 0;
  position: relative;
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 0.25em;
  left: 0.25em;
  right: 0;
  bottom: 0;
}

<div
  className="emotion-9 emotion-10"
  type="info"
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-2 emotion-1"
    >
      <div
        className="emotion-0 emotion-1"
        fontSize="text-s"
      >
        Hello World
      </div>
    </div>
  </div>
  <button
    className="emotion-7 emotion-8"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-6"
      viewBox="0 0 8 8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(-4 -4)"
      >
        <path
          d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
          fillOpacity=".5"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Alert renders type success correctly 1`] = `
.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  font-size: 0.875rem;
}

.emotion-7 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  width: 1em;
  height: 1em;
  padding: 0;
  position: relative;
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 0.25em;
  left: 0.25em;
  right: 0;
  bottom: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding: 0.75rem 1.125rem;
  background: #e0f8e6;
  border-color: #26853f;
}

<div
  className="emotion-9 emotion-10"
  type="success"
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-2 emotion-1"
    >
      <div
        className="emotion-0 emotion-1"
        fontSize="text-s"
      >
        Hello World
      </div>
    </div>
  </div>
  <button
    className="emotion-7 emotion-8"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-6"
      viewBox="0 0 8 8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(-4 -4)"
      >
        <path
          d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
          fillOpacity=".5"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Alert renders type warning correctly 1`] = `
.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  font-size: 0.875rem;
}

.emotion-7 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  width: 1em;
  height: 1em;
  padding: 0;
  position: relative;
}

.emotion-7:focus {
  outline: none;
}

.emotion-6 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 0.25em;
  left: 0.25em;
  right: 0;
  bottom: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding: 0.75rem 1.125rem;
  background: #fdebd0;
  border-color: #e69524;
}

<div
  className="emotion-9 emotion-10"
  type="warning"
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-2 emotion-1"
    >
      <div
        className="emotion-0 emotion-1"
        fontSize="text-s"
      >
        Hello World
      </div>
    </div>
  </div>
  <button
    className="emotion-7 emotion-8"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-6"
      viewBox="0 0 8 8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(-4 -4)"
      >
        <path
          d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
          fillOpacity=".5"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Alert renders with a title 1`] = `
.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding: 0.75rem 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  font-size: 0.875rem;
}

.emotion-9 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  width: 1em;
  height: 1em;
  padding: 0;
  position: relative;
}

.emotion-9:focus {
  outline: none;
}

.emotion-8 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 0.25em;
  left: 0.25em;
  right: 0;
  bottom: 0;
}

.emotion-0 {
  margin: 0;
  color: #0c0d0d;
  font-weight: 700;
  font-size: 1rem;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0.375rem;
  margin-left: 0;
  font-weight: 700;
}

<div
  className="emotion-11 emotion-12"
  type="info"
>
  <div
    className="emotion-6 emotion-7"
  >
    <div
      className="emotion-4 emotion-3"
    >
      <p
        className="emotion-0 emotion-1"
        color="textHeading"
        fontSize="text"
        fontWeight="bold"
      >
        My Title
      </p>
      <div
        className="emotion-2 emotion-3"
        fontSize="text-s"
      >
        Hello World
      </div>
    </div>
  </div>
  <button
    className="emotion-9 emotion-10"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-8"
      viewBox="0 0 8 8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(-4 -4)"
      >
        <path
          d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
          fillOpacity=".5"
        />
      </g>
    </svg>
  </button>
</div>
`;
